--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <a href="mission 1/index.html">Mission 1</a><br>
     <a href="TP1/index (1).html">TP1</a><br>
     <a href="TP2/index.html">TP2</a><br>
-    <a href="mission 2/index.html">Mission 2</a>
+    <a href="mission 2/index.html">Mission 2</a> <br>
+    <a href="tp3/formulaire1.html">TP3</a>
 
 
 </body>
