--- a/tp3/formulaire1.html
+++ b/tp3/formulaire1.html
@@ -4,18 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
     <h1>contacter nous</h1>
-<form action="a" method="post">
+<form action="#" method="post">
     <label for="nom">Nom :</label>
     <input type="text" id="nom" name="nom" required>
 
     <label for="tel">E-mail :</label>
     <input type="number" id="tel" name="tel" required>
-    <label for="message" name="message" rows="4" required></textarea>
+    
+    <label for="message">Message</label>
+    <textarea id="message" name="message" rows="4" required></textarea>
 
     <input type="submit" value="Envoyer">
    </form>
+
+   <h2>Retour au Sommaire</h2>
+   <a href="../index.html">Sommaire</a>
 </body>
 </html>
