--- a/tp3/formulaire1.html
+++ b/tp3/formulaire1.html
@@ -22,6 +22,6 @@
    </form>
 
    <h2>Retour au Sommaire</h2>
-   <a href="../index.html">Sommaire</a>
+   <a href="../index.html">Sommaire</a> <br>
 </body>
 </html>
