--- a/mission 2/index.html
+++ b/mission 2/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Page principal du TP2</h1>
+    <h1>Page principal mission 2</h1>
     <iframe src="page1.html" name="f1" width="30%" height="800"></iframe>
     <iframe src="page2.html" name="f2" width="65%" height="800"></iframe>
 
