--- a/tp4/exercice1.html
+++ b/tp4/exercice1.html
@@ -6,7 +6,10 @@
 <title>test blocks/float</title>
 </head>
 <body>
-    <div class="titre"><h1>Voici un article sur Apple</h1></div>
+ <center><nav> 
+ <a href="../tp4/exercice1.html">Exercice 1</a>
+ <a href="../mission 4/index.html">Exercice 2</a>
+</nav>  </center>
 
 <div class="block1"><p>Je suis un paragraphe flottant</p></div>
 <div class="block2"><img src="Apple-logo.png" width="50" height="50"></div>
