--- a/mission 4/index.html
+++ b/mission 4/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
 
+    <nav> 
+        <a href="../tp4/exercice1.html">Exercice 1</a>
+        <a href="../mission 4/index.html">Exercice 2</a>
+       </nav>  
+       
+
     <header>
         <h1>Voici un article sur Apple</h1>
     </header>
