--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         body {
             font-family: Arial, sans-serif;
             line-height: 1.6;
-            background-color: #ff4d4d; /* Fond rouge */
-            color: #fff; /* Texte en blanc */
+            background-color: #ff4d4d;
+            color: #fff;
             margin: 0;
             display: flex;
             flex-direction: column;
@@ -19,29 +19,28 @@
             height: 100vh;
         }
         h1 {
-            color: #fff; /* Couleur du titre */
+            color: #fff;
             margin-bottom: 20px;
         }
         nav {
-            background-color: rgba(255, 255, 255, 0.8); /* Fond semi-transparent pour la nav */
-            border-radius: 10px;
+            background-color: rgba(255, 255, 255, 0.8);
             padding: 20px;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
         }
         ul {
-            list-style: none; /* Supprime les puces de la liste */
+            list-style: none;
             padding: 0;
         }
         li {
-            margin: 10px 0; /* Espace entre les éléments de la liste */
+            margin: 10px 0;
         }
         a {
             text-decoration: none;
-            color: #ff4d4d; /* Couleur des liens */
+            color: #ff4d4d;
             font-weight: bold;
         }
         a:hover {
-            color: #d32f2f; /* Couleur des liens au survol */
+            color: #d32f2f;
             text-decoration: underline;
         }
     </style>
@@ -57,6 +56,7 @@
             <li><a href="tp3/formulaire1.html">TP3</a></li>
             <li><a href="mission 3/mission3.html">Mission 3</a></li>
             <li><a href="tp4/exercice1.html">TP4</a></li>
+            <li><a href="mission 4/cv.html">Mission 4</a></li>
         </ul>
     </nav>
 </body>
