--- a/tp4/exercice1.html
+++ b/tp4/exercice1.html
@@ -8,7 +8,7 @@
 <body>
  <center><nav> 
  <a href="../tp4/exercice1.html">Exercice 1</a>
- <a href="../mission 4/index.html">Exercice 2</a>
+ <a href="../mission tp4/index.html">Exercice 2</a>
 </nav>  </center>
 
 <div class="block1"><p>Je suis un paragraphe flottant</p></div>
