--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             <li><a href="mission 3/mission3.html">Mission 3</a></li>
             <li><a href="tp4/exercice1.html">TP4</a></li>
             <li><a href="mission 4/cv.html">Mission 4</a></li>
+            <li><a href="mission tp4/index.html">Mission 4</a></li>
         </ul>
     </nav>
 </body>
