--- a/index.html
+++ b/index.html
@@ -50,14 +50,16 @@
     <nav>
         <ul>
             <li><a href="mission 1/index.html">Mission 1</a></li>
-            <li><a href="TP1/index (1).html">TP1</a></li>
+            <li><a href="TP1/index.html">TP1</a></li>
             <li><a href="TP2/index.html">TP2</a></li>
             <li><a href="mission 2/index.html">Mission 2</a></li>
             <li><a href="tp3/formulaire1.html">TP3</a></li>
             <li><a href="mission 3/mission3.html">Mission 3</a></li>
             <li><a href="tp4/exercice1.html">TP4</a></li>
             <li><a href="mission 4/cv.html">Mission 4</a></li>
-            <li><a href="mission tp4/index.html">Mission 4</a></li>
+            <li><a href="TP_Js1/index.html">TP JAVA</a></li>
+            <li><a href="Mission 5/index.html">Mission 5</a></li>
+
         </ul>
     </nav>
 </body>
