--- a/Mission 5/index.html
+++ b/Mission 5/index.html
@@ -62,11 +62,11 @@
             <li>
                 <a href="#">Certification</a>
                 <ul>
-                    <li><a href="file:///P:/z/Certificat_1.pdf">Certification 1</a></li>
-                    <li><a href="file:///P:/z/Attestation_de_suivi%202.pdf">Certification 2</a></li>
-                    <li><a href="file:///P:/z/Certificat_3.pdf">Certification 3</a></li>
-                    <li><a href="file:///P:/z/Certificat_4.pdf">Certification 4</a></li>
-                    <li><a href="">Certification 3</a></li>
+                    <li><a href="Certificat_1.pdf">Certification 1</a></li>
+                    <li><a href="Attestation_de_suivi 2.pdf">Certification 2</a></li>
+                    <li><a href="Certificat_3.pdf">Certification 3</a></li>
+                    <li><a href="Certificat_4.pdf">Certification 4</a></li>
+                    <li><a href="">Certification 5</a></li>
                 </ul>
             </li>
         </ul>
