--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
             <li><a href="mission 4/cv.html">Mission 4</a></li>
             <li><a href="TP_Js1/index.html">TP JAVA</a></li>
             <li><a href="Mission 5/index.html">Mission 5</a></li>
+            <li><a href="tp 3 facture js/index.html">Mission 5</a></li>
 
         </ul>
     </nav>
