--- a/Mission 5/index.html
+++ b/Mission 5/index.html
@@ -23,8 +23,8 @@
                 <a href="#">Javascript</a>
                 <ul>
                     <li><a href="../TP_Js1/index.html">TP 1</a></li>
-                    <li><a href="#">TP 2</a></li>
-                    <li><a href="#">TP 3</a></li>
+                    <li><a href="../TP_Js2/index.html">TP 2</a></li>
+                    <li><a href="../tp 3 facture js/index.html">TP 3</a></li>
                     <li><a href="#">TP 4</a></li>
                     <li><a href="#">TP 5</a></li>
                 </ul>
