--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
             <li><a href="tp4/exercice1.html">TP4</a></li>
             <li><a href="mission 4/cv.html">Mission 4</a></li>
             <li><a href="TP_Js1/index.html">TP JAVA</a></li>
-            <li><a href="Mission 5/index.html">Mission 5</a></li>
+            <li><a href="Mission 5/index.html">PorteFolio</a></li>
             <li><a href="tp 3 facture js/index.html">TP 3 facture</a></li>
+            <li><a href="TP_JS4/index.html">TP Java 4</a></li>
 
         </ul>
     </nav>
