--- a/Mission 5/index.html
+++ b/Mission 5/index.html
@@ -56,7 +56,7 @@
                     <li><a href="../mission2/index.html">Mission 2</a></li>
                     <li><a href="../mission3/index.html">Mission 3</a></li>
                     <li><a href="../mission4/cv.html">Mission 4</a></li>
-                    <li><a href="#">Mission 5</a></li>
+                    <li><a href="..//mission 8/interface.html">Mission 8</a></li>
                 </ul>
             </li>
             <li>
