--- a/Mission 5/index.html
+++ b/Mission 5/index.html
@@ -57,6 +57,9 @@
                     <li><a href="../mission3/index.html">Mission 3</a></li>
                     <li><a href="../mission4/cv.html">Mission 4</a></li>
                     <li><a href="..//mission 8/interface.html">Mission 8</a></li>
+                    <li><a href="../mission 9/index.html">Mission 9</a></li>
+                    <li><a href="../mission 10/index.html">Mission 10</a></li>
+
                 </ul>
             </li>
             <li>
